2011-01-26  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.2.3 Released.

	------------------------------------------------------------------------
	r303907 | mnicholson | 2011-01-25 14:56:12 -0600 (Tue, 25 Jan 2011) |
	2 lines

	Reimplemented fax session reservation to reverse the ABI breakage
	introduced in r297486.

	------------------------------------------------------------------------

2011-01-20  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.2.2 Released.

	* An improper merge of the changes for AST-2011-011 caused the changes
	  to not be applied to the 1.8.2.1 tag. The 1.8.2.2 tag contains the
	  security changes related to AST-2011-001.

2011-01-17  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.2.1 Released.

	* AST-2011-001: Stack buffer overflow in SIP channel driver

2011-01-12  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.2 Released.

	* Merge in a change in the configure script to fix an issue for
	  Debian packagers.

	  ------------------------------------------------------------------------
	  r301221 | pabelanger | 2011-01-09 15:40:35 -0600 (Sun, 09 Jan 2011)
	  | 21 lines

	  Merged revisions 301220 via svnmerge from 
	  https://origsvn.digium.com/svn/asterisk/branches/1.6.2 [^]

	  ........
	    r301220 | pabelanger | 2011-01-09 16:38:24 -0500 (Sun, 09 Jan
	    2011) | 14 lines
	    SOUND_CACHE_DIR now defaults to empty

	    Sounds files included in the Asterisk tarball were being
	    ignored and
	    re-downloaded. Users wanting to cache the files can
	    still override the setting
	    using the --with-sounds-cache option.

	    (closes issue 0018589)
	    Reported by: pabelanger
	       Patches:
	        issue18589.patch uploaded by
		pabelanger (license 224)
	        Tested by: pabelanger

	    Review:
	    https://reviewboard.asterisk.org/r/1074/

	    ------------------------------------------------------------------------

2010-12-13  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.2-rc1 Released.
